crud functioning for todos api endpoints working